# flet-ui-template

./: .gitignore  README.md  README.zh-CN.md  config.py  config.toml  main.py  pyproject.toml  theme.py
components/: avatar.py  detail_panel.py  title_bar.py
database/: __init__.py
models/: __init__.py
my_utils/: icons.py  route.py
services/: repository.py
views/: app.py  detail_chat.py  detail_generic.py  list_panel.py  nav_rail.py  settings.py  shell.py  workspace.py
